--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -855,6 +855,58 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   lccn      = {2009052131},
 }
 
+@Book{holmes2019,
+  author    = {Holmes, S. and Huber, W.},
+  publisher = {Cambridge University Press},
+  title     = {Modern Statistics for Modern Biology},
+  year      = {2019},
+  isbn      = {9781108705295},
+}
+
+@Article{yun2019,
+  author       = {Yun, Kyuseok and Kim, Sungwon and Kim, Dongjin and Chung, Myungwoo and Jo, Wonhyuk and Hwang, Hyerim and Nam, Daewoong and Kim, Sangsoo and Kim, Jangwoo and Park, Sang-Youn and Kim, Kyung Sook and Song, Changyong and Lee, Sooheyong and Kim, Hyunjung},
+  journal      = {Scientific reports},
+  title        = {Coherence and pulse duration characterization of the PAL-XFEL in the hard X-ray regime.},
+  year         = {2019},
+  issn         = {2045-2322},
+  month        = mar,
+  pages        = {3300},
+  volume       = {9},
+  abstract     = {We characterize the spatial and temporal coherence properties of hard X-ray pulses from the Pohang Accelerator Laboratory X-ray Free Electron Laser (PAL-XFEL, Pohang, Korea). The measurement of the single-shot speckle contrast, together with the introduction of corrections considering experimental conditions, allows obtaining an intrinsic degree of transverse coherence of 0.85 ± 0.06. In the Self-Amplified Spontaneous Emission regime, the analysis of the intensity distribution of X-ray pulses also provides an estimate for the number of longitudinal modes. For monochromatic and pink (i.e. natural bandwidth provided by the first harmonic of the undulator) beams, we observe that the number of temporal modes is 6.0 ± 0.4 and 90.0 ± 7.2, respectively. Assuming a coherence time of 2.06 fs and 0.14 fs for the monochromatic and pink beam respectively, we estimate an average X-ray pulse duration of 12.6 ± 1.0 fs.},
+  country      = {England},
+  doi          = {10.1038/s41598-019-39765-3},
+  issn-linking = {2045-2322},
+  issue        = {1},
+  nlm-id       = {101563288},
+  owner        = {NLM},
+  pii          = {10.1038/s41598-019-39765-3},
+  pmc          = {PMC6397240},
+  pmid         = {30824784},
+  pubmodel     = {Electronic},
+  pubstate     = {epublish},
+  revised      = {2020-03-09},
+}
+
+@Article{lehmkuhler2014,
+  author        = {Lehmk{\"u}hler, Felix and Gutt, Christian and Fischer, Birgit and Schroer, Martin A. and Sikorski, Marcin and Song, Sanghoon and Roseker, Wojciech and Glownia, James and Chollet, Mathieu and Nelson, Silke and Tono, Kensuke and Katayama, Tetsuo and Yabashi, Makina and Ishikawa, Tetsuya and Robert, Aymeric and Gr{\"u}bel, Gerhard},
+  journal       = {Scientific Reports},
+  title         = {Single Shot Coherence Properties of the Free-Electron Laser SACLA in the Hard X-ray Regime},
+  year          = {2014},
+  number        = {1},
+  pages         = {5234},
+  volume        = {4},
+  abstract      = {We measured the coherence properties of the free-electron laser SACLA on a single shot basis at an X-ray energy of 8 keV. By analysing small-angle X-ray scattering speckle patterns from colloidal dispersions we found a degree of transverse coherence of βt = 0.79 $\pm$0.09. Taking detector properties into account, we developed a simulation model in oder to determine the degree of coherence from intensity histograms. Finally we calculated a coherence time of τc = 0.1 fs and a pulse duration of 5.2 fs which corresponds with previous predictions.},
+  da            = {2014/06/10},
+  date-added    = {2020-10-31 12:44:46 +0000},
+  date-modified = {2020-10-31 12:44:46 +0000},
+  doi           = {10.1038/srep05234},
+  id            = {Lehmk{\"u}hler2014},
+  ty            = {JOUR},
+}
+
+@Article{,
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
