--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -120,8 +120,9 @@
 \DeclareMathOperator{\difn}{\mathrm{d}^n \!}
 \DeclareMathOperator{\diff}{\mathrm{d}\!}
 
-\DeclareMathOperator\erf{erf}
-\DeclareMathOperator\erfc{erfc}
+\DeclareMathOperator{\erf}{erf}
+\DeclareMathOperator{\erfc}{erfc}
+\DeclareMathOperator{\Var}{Var}
 %%pygments%
 \usepackage{fancyvrb}
 \usepackage{xcolor}
