add modes image

--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -287,6 +287,11 @@ The variance of a product of (uncorrelated) photon counts  following this distri
 
 Following the idea of Trost et. al, this can be used so estimate the noise of an intensity correlation measurement, even though the actual signal will break the assumption of having uncorrelated photon counts.
 
+\begin{figure}
+\centering
+\includegraphics[width=0.8\linewidth]{images/modes.pdf}
+\caption[Photon Statistics with different numbers of Modes]{Photon statistics with different numbers of modes $M$ and equal mean of 0.1\,photons. A lower number of modes corresponds the an higher probability of observing multi photon events. The limit of a high number of modes is a Poisson distribution.}
+\end{figure}
 \section{Kossel Lines}
 X-Ray radiation originating from within a single crystal gets Bragg reflected at the lattice planes, causing Intensity variation in $90^o-\theta$ around the direction $k_{hkl}$, forming the \textit{Kossel Cones}. On the spherical detector centered at at the crystal, the points with influenced intensity would lie on circles with radii determined by ...
 
