--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -3,7 +3,7 @@
 \section{Sample Preparation}
 Magnetite Nanoparticles coated with Oleic Acid dispersed in Toluene were bought from NN-Labs, inhibited Methylmethacrylate (MMA) and Etyhlhexylmethacrylate (EHMA)  (Sigma Aldrich) were filtered using a prefilled column to remove the Inhibitor,  2,2-azo-bis-isobutyrylnitrile (AIBN) (Sigma Aldrich) was used as thermally activated radical initiator as received. Polystyrene (Sigma Aldrich, MW XXX) was used as received. As solvents, Methanol, Toluene and Chloroform were used.
 \subsection{Nanoparticles in Polystyrene Matrix}
-The nanoparticles were precipitated with Methanol, centrifuged and redispersed in Chloroform at a concentration of 25\,mg/ml, whereas the weight of nanoparticles includes the weight of the oleic acid capping. Polystyrene was dissolved in Chloroform at a concentration of 250\,mg/ml and different volumes of the nanoparticles solution were added (to account for the different iron contents) to 5\,ml of the Polystyrene solution (see \fref{tab:samplePS}). After ensuring dispersion by strong sonication, fractions of XXX\,ul the solution were dropped onto glass slides and dried. After drying, the films were carefully removed from the glass slides.
+The nanoparticles were precipitated with Methanol, centrifuged and redispersed in Chloroform at a concentration of 25\,mg/ml, whereas the weight of nanoparticles includes the weight of the oleic acid capping. Polystyrene was dissolved in Chloroform at a concentration of 250\,mg/ml and different volumes of the nanoparticles solution were added (to account for the different iron contents) to 5\,ml of the Polystyrene solution (see \fref{tab:samplePS}). After ensuring dispersion by strong sonication, fractions of XXX\,ul the solution were dropped onto glass slides and dried. After drying, the approximately 200\,um thick films were carefully removed from the glass slides.
 As an iron containing control sample, 60mg FeCl3 and XXX Polystyrene were dissolved in 6ml acetone, sonicated and  fractions of XXX were dropped onto slowly spinning glass slides (XXX rpm for XX 5\,min) and carefully removed after drying.
 \begin{table}
 	\centering
@@ -44,13 +44,40 @@ As a control sample, the polymerisation was performed without any nanoparticles 
 	\end{tabular}
 \end{table}
 
-\subsection{Sample Characterisation}
-Before sample preparation, the iron oxide nanoparticles were deposited on a silicon nitride membrane and imaged using a FEI Tecnai microscope the measure the size distribution.
+\subsection{Nanoparticle Sample Characterisation}
+Before sample preparation, the iron oxide nanoparticles as received were diluted with Toluene, deposited on a silicon nitride membrane and imaged using a FEI Tecnai microscope  (see \fref{fig:tem}).  For each of the three nominal sizes, 3 different areas on the membrane were analyzed using ImageJ, resulting in mean radii of 8.3$\pm$1.7\,nm ("20\,nm") 4.1$\pm$0.8 \,nm	("10\,nm") 3.1$\pm$0.6\,nm ("5\,nm")
+1,7	0,8	0,6
+\begin{figure}
+	\centering
+	\begin{subfigure}[b]{0.25\textwidth}
+		\includegraphics[width=\linewidth]{images/tem5.png}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.25\textwidth}
+		\includegraphics[width=\linewidth]{images/tem10.png}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.25\textwidth}
+		\includegraphics[width=\linewidth]{images/tem20.png}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.25\textwidth}
+		\includegraphics[width=\linewidth]{images/temh5.png}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.25\textwidth}
+		\includegraphics[width=\linewidth]{images/temh10.png}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.25\textwidth}
+		\includegraphics[width=\linewidth]{images/temh20.png}
+	\end{subfigure}
+\caption{TEM images of the iron oxide nanoparticles. From left to right: 5\,nm 10\,nm and 20\,nm nominal size in two different magnifications each (rows).}
+\label{fig:tem}
+\end{figure}
+.
 
 
-SAXS measurements of the prepared nanoparticle polymer foils where performed at the SSRL beamline 1-5 .
+SAXS measurements of the prepared nanoparticle polymer foils where performed at the SSRL beamline 1-5 . Samples were meassured for 5\,min each, a subtraction of the polymer matrix background performed and a size distribution of sperical particles with hardsphere interaction fitted to the radial profile. The low-q area is dominated by aggregate formation, which cannot be precisely quantified due to stray light and limited measuring range and is accounted for by a gunier-porod function.
+The SAXS measurements give a reasonably good insight into the expected results of the IDI scheme, which will differ due to the iron specificity and the smaller focal volume in the latter.  
 \subsection{GaAs crystal films}
-
+As a crystalline sample GaAs was chosen for its simple fcc structure and large product of the gallium K-shell fluorescence Energy and lattice constant. The samples were prepared by Ben Reeves at the Stanford Nanofabrication Facility. 
+Using MOCVD, 50\,nm GaAs, 400\,nm AlGaAs as an etch stop and finally a 5\,um GaAs film were grown on an epi-ready (100)±0.1° GaAs substrate. The speciman was cut into 12\,mm\,x\,15\,mm pieces, each glued to an approx. 100\,um thick quartz cover slip with the 5\,um film layer facing towards to glass. The substrate and the AlGaAs layer were selectively etched away via C6H8O7:H2O2 and HF:H2O wet etches, respectively. This left 5\,um thin GaAs films glued onto the the quartz slides (see \fref{fig:gaas_sample.pdf}).  XRD was used to measure the width of the (004) GaAs bragg peak as 0.004°, indicative of high quality single crystals. 
 \section{Setup}
 The setup used at EH5 at SACLA is shown in \fref{fig:setup}. 
 
