--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -74,7 +74,27 @@ Before sample preparation, the iron oxide nanoparticles as received were diluted
 
 
 SAXS measurements of the prepared nanoparticle polymer foils where performed at the SSRL beamline 1-5 . Samples were meassured for 5\,min each, a subtraction of the polymer matrix background performed and a size distribution of sperical particles with hardsphere interaction fitted to the radial profile. The low-q area is dominated by aggregate formation, which cannot be precisely quantified due to stray light and limited measuring range and is accounted for by a gunier-porod function.
+
+\begin{figure}
+	\centering
+	\begin{subfigure}[b]{0.3\textwidth}
+		\includegraphics[width=\linewidth]{images/ps5.pdf}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.3\textwidth}
+		\includegraphics[width=\linewidth]{images/ps10.pdf}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.3\textwidth}
+		\includegraphics[width=\linewidth]{images/ps20.pdf}
+	\end{subfigure}
+
+	\caption{SAXS profiles of nominal 5\,nm, 10\,nm and 20\,nm iron oxide nanoparticles in polystyrene matrix (left to right).}
+	\label{fig:tem}
+\end{figure}
+
+
+
 The SAXS measurements give a reasonably good insight into the expected results of the IDI scheme, which will differ due to the iron specificity and the smaller focal volume in the latter.  
+
 \subsection{GaAs crystal films}
 As a crystalline sample GaAs was chosen for its simple fcc structure and large product of the gallium K-shell fluorescence Energy and lattice constant. The samples were prepared by Ben Reeves at the Stanford Nanofabrication Facility. 
 Using MOCVD, 50\,nm GaAs, 400\,nm AlGaAs as an etch stop and finally a 5\,um GaAs film were grown on an epi-ready (100)±0.1° GaAs substrate. The speciman was cut into 12\,mm\,x\,15\,mm pieces, each glued to an approx. 100\,um thick fused silica cover slip with the 5\,um film layer facing towards the silica. The substrate and the AlGaAs layer were selectively etched away via C6H8O7:H2O2 and HF:H2O wet etches, respectively. This left 5\,um thin GaAs films glued onto the the quartz slides (see \fref{fig:gaas_sample}).  XRD with Cu K-alpha was used to measure the width of the (004) GaAs bragg peak as 0.004°, indicative of high quality single crystals. 
