--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -73,7 +73,7 @@ Before sample preparation, the iron oxide nanoparticles as received were diluted
 .
 
 
-SAXS measurements of the prepared nanoparticle polymer foils where performed at the SSRL beamline 1-5 . Samples were meassured for 5\,min each, a subtraction of the polymer matrix background performed and a size distribution of sperical particles with hardsphere interaction fitted to the radial profile. The low-q area is dominated by aggregate formation, which cannot be precisely quantified due to stray light and limited measuring range and is accounted for by a gunier-porod function.
+SAXS measurements of the prepared nanoparticle polymer foils where performed at the SSRL beamline 1-5 . Samples were measured at 12\,keV for 5\,min each, a subtraction of the polymer matrix background was performed and a size distribution of spherical particles with hardsphere interaction was fitted to the radial profile. The low-q area is dominated by aggregate formation, which cannot be precisely quantified due to stray light and limited measuring range and is accounted for by a guinier-porod function, see \fref{fig:saxs} \cite{percus1958,feigin1987,Ilavsky2009}.
 
 \begin{figure}
 	\centering
@@ -88,7 +88,7 @@ SAXS measurements of the prepared nanoparticle polymer foils where performed at 
 	\end{subfigure}
 
 	\caption{SAXS profiles of nominal 5\,nm, 10\,nm and 20\,nm iron oxide nanoparticles in polystyrene matrix (left to right).}
-	\label{fig:tem}
+	\label{fig:saxs}
 \end{figure}
 
 
