--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -814,7 +814,6 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   year      = {2015},
   isbn      = {9783319169859},
   series    = {Undergraduate Lecture Notes in Physics},
-  url       = {https://books.google.de/books?id=pytACQAAQBAJ},
 }
 
 @Article{goodman1976,
@@ -829,7 +828,6 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   doi       = {10.1364/JOSA.66.001145},
   keywords  = {Laser light; Laser speckle; Polarization; Spatial frequency; Speckle patterns; Wavefronts},
   publisher = {OSA},
-  url       = {http://www.osapublishing.org/abstract.cfm?URI=josa-66-11-1145},
 }
 
 @Article{mandel1959,
@@ -904,7 +902,45 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   ty            = {JOUR},
 }
 
-@Article{,
+@Article{percus1958,
+  author    = {Percus, Jerome K. and Yevick, George J.},
+  journal   = {Phys. Rev.},
+  title     = {Analysis of Classical Statistical Mechanics by Means of Collective Coordinates},
+  year      = {1958},
+  month     = {Apr},
+  pages     = {1--13},
+  volume    = {110},
+  doi       = {10.1103/PhysRev.110.1},
+  issue     = {1},
+  numpages  = {0},
+  publisher = {American Physical Society},
+}
+
+@Book{feigin1987,
+  author       = {Feigin, L. A. and Svergun, D. I.},
+  publisher    = {Plenum Press},
+  title        = {Structure Analysis by Small-Angle X-Ray and Neutron Scattering},
+  year         = {1987},
+  address      = {New York},
+  edition      = {1},
+  isbn         = {0306426293},
+  month        = {1987-12-31},
+  organization = {Plenum Press},
+  pages        = {350},
+}
+
+@Article{Ilavsky2009,
+  author   = {Ilavsky, Jan and Jemian, Peter R.},
+  journal  = {Journal of Applied Crystallography},
+  title    = {{{Irena}: tool suite for modeling and analysis of small-angle scattering}},
+  year     = {2009},
+  month    = {Apr},
+  number   = {2},
+  pages    = {347--353},
+  volume   = {42},
+  abstract = {{\it Irena}, a tool suite for analysis of both X-ray and neutron small-angle scattering (SAS) data within the commercial {\it Igor Pro} application, brings together a comprehensive suite of tools useful for investigations in materials science, physics, chemistry, polymer science and other fields. In addition to Guinier and Porod fits, the suite combines a variety of advanced SAS data evaluation tools for the modeling of size distribution in the dilute limit using maximum entropy and other methods, dilute limit small-angle scattering from multiple non-interacting populations of scatterers, the pair-distance distribution function, a unified fit, the Debye{--}Bueche model, the reflectivity (X-ray and neutron) using Parratt's formalism, and small-angle diffraction. There are also a number of support tools, such as a data import/export tool supporting a broad sampling of common data formats, a data modification tool, a presentation-quality graphics tool optimized for small-angle scattering data, and a neutron and X-ray scattering contrast calculator. These tools are brought together into one suite with consistent interfaces and functionality. The suite allows robust automated note recording and saving of parameters during export.},
+  doi      = {10.1107/S0021889809002222},
+  keywords = {computer programs, small-angle scattering, modeling, size distribution, pair-distance distribution function},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
