--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -45,8 +45,8 @@ As a control sample, the polymerisation was performed without any nanoparticles 
 \end{table}
 
 \subsection{Nanoparticle Sample Characterisation}
-Before sample preparation, the iron oxide nanoparticles as received were diluted with Toluene, deposited on a silicon nitride membrane and imaged using a FEI Tecnai microscope  (see \fref{fig:tem}).  For each of the three nominal sizes, 3 different areas on the membrane were analyzed using ImageJ, resulting in mean radii of 8.3$\pm$1.7\,nm ("20\,nm") 4.1$\pm$0.8 \,nm	("10\,nm") 3.1$\pm$0.6\,nm ("5\,nm")
-1,7	0,8	0,6
+Before sample preparation, the iron oxide nanoparticles as received were diluted with Toluene, deposited on a silicon nitride membrane and imaged using a FEI Tecnai microscope  (see \fref{fig:tem}).  For each of the three nominal sizes, 3 different areas on the membrane were analyzed using ImageJ, resulting in mean radii of 8.3$\pm$1.7\,nm ("20\,nm") 4.1$\pm$0.8 \,nm	("10\,nm") 3.1$\pm$0.6\,nm ("5\,nm"). In the TEM images, the effect of the oleic acid ligands used to stabilize the nanoparticle dispersion  can be seen as the inter-particle distance.
+
 \begin{figure}
 	\centering
 	\begin{subfigure}[b]{0.25\textwidth}
@@ -74,6 +74,8 @@ Before sample preparation, the iron oxide nanoparticles as received were diluted
 
 
 SAXS measurements of the prepared nanoparticle polymer foils where performed at the SSRL beamline 1-5 . Samples were measured at 12\,keV for 5\,min each, a subtraction of the polymer matrix background was performed and a size distribution of spherical particles with hardsphere interaction was fitted to the radial profile. The low-q area is dominated by aggregate formation, which cannot be precisely quantified due to stray light and limited measuring range and is accounted for by a guinier-porod function, see \fref{fig:saxs} \cite{percus1958,feigin1987,Ilavsky2009}.
+According to the regression, the aggregates seem to have a radius of gyration of 20-30\,nm (the straylight limits the measurement validity in those small q areas), the porod $P$ of 2.5-3.8 suggests a dimensionality of the aggregates between 2 and 3.  \cite{feigin1987,lili2005}. The radii of the form factor agree within the corossponding margin of error with the values of the TEM measurement, the higher radius parameters of the structure factors correspond to the thin layer of oleic acid ligands.
+
 
 \begin{figure}
 	\centering
@@ -91,9 +93,7 @@ SAXS measurements of the prepared nanoparticle polymer foils where performed at 
 	\label{fig:saxs}
 \end{figure}
 
-
-
-The SAXS measurements give a reasonably good insight into the expected results of the IDI scheme, which will differ due to the iron specificity and the smaller focal volume in the latter.  
+The SAXS measurements give a reasonably good insight into the expected results of the IDI scheme measurement of the same sample, which will differ due to the iron specificity and the smaller focal volume in the latter.  
 
 \subsection{GaAs crystal films}
 As a crystalline sample GaAs was chosen for its simple fcc structure and large product of the gallium K-shell fluorescence Energy and lattice constant. The samples were prepared by Ben Reeves at the Stanford Nanofabrication Facility. 
