--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -943,6 +943,14 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   keywords = {computer programs, small-angle scattering, modeling, size distribution, pair-distance distribution function},
 }
 
+@PhdThesis{lili2005,
+  author = {Li Li},
+  school = {Universit{\"a}t Bayreuth},
+  title  = {Structural Analysis of Cylindrical Particles by Small Angle X-ray Scattering},
+  year   = {2005},
+  type   = {phdthesis},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
